Footer styling fixed with taking off the absolute value along with adding margins, additonal font weight added to social icons and color change to make more visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,14 +186,23 @@ button[type="submit"] {
 /*--------------------------------FOOTER---*/
 
 .footer {
-  height:150px ;
-
+    margin-top: 25rem ;
+    position: relative;
+    background-color:#4e4e4e;
+    
 }
 
 .social-links i {
-    color: #9d4edd;
+    color:#fa88f0e0;
+    font-size: 1.563rem;
+    font-weight: 300;
+
 }
 
 .social-links li{
     display: inline;
+    margin: 1%;
+    margin-top: 0.125rem;
+    padding: 5%;
+    
 }
